--- a/index.html
+++ b/index.html
@@ -530,10 +530,9 @@
         </button>
         <p class="contact-form-text">Оставьте свои данные, мы вам перезвоним</p>
         <form class="contact-form">
-          <div class="contact-form-input-wrapper">
-            <label class="contact-form-field" for="contact_name">
-              <span class="contact-form-field-span">Имя</span>
-
+          <label class="contact-form-field" for="contact_name">
+            <span class="contact-form-field-span">Имя</span>
+            <span class="contact-input-span">
               <input
                 id="contact_name"
                 class="contact-form-input"
@@ -542,19 +541,14 @@
                 name="user_name"
                 minlength="2"
               />
-              <svg class="contact-form-icon">
-                <use
-                  href="./images/icons.svg#icon-form-person"
-                  width="18px"
-                  height="18px"
-                ></use>
+              <svg class="contact-form-icon" width="18px" height="18px">
+                <use href="./images/icons.svg#icon-form-person"></use>
               </svg>
-            </label>
-          </div>
-          <div class="contact-form-input-wrapper">
-            <label class="contact-form-field" for="contact_phone">
-              <span class="contact-form-field-span">Телефон</span>
-
+            </span>
+          </label>
+          <label class="contact-form-field" for="contact_phone">
+            <span class="contact-form-field-span">Телефон</span>
+            <span class="contact-input-span">
               <input
                 id="contact_phone"
                 class="contact-form-input"
@@ -563,19 +557,14 @@
                 required
                 pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
                 title="xxx-xxx-xx-xx"
-              /><svg class="contact-form-icon">
-                <use
-                  href="./images/icons.svg#icon-form-phone"
-                  width="18px"
-                  height="18px"
-                ></use>
+              /><svg class="contact-form-icon" width="18px" height="18px">
+                <use href="./images/icons.svg#icon-form-phone"></use>
               </svg>
-            </label>
-          </div>
-          <div class="contact-form-input-wrapper">
-            <label class="contact-form-field" for="contact_email">
-              <span class="contact-form-field-span">Почта</span>
-
+            </span>
+          </label>
+          <label class="contact-form-field" for="contact_email">
+            <span class="contact-form-field-span">Почта</span>
+            <span class="contact-input-span">
               <input
                 class="contact-form-input"
                 id="contact_email"
@@ -583,15 +572,13 @@
                 name="user_email"
                 required
               />
-              <svg class="contact-form-icon">
-                <use
-                  href="./images/icons.svg#icon-form-mail"
-                  width="18px"
-                  height="18px"
-                ></use>
-              </svg>
-            </label>
-          </div>
+              <span class="contact-form-icon">
+                <svg width="18px" height="18px">
+                  <use href="./images/icons.svg#icon-form-mail"></use>
+                </svg>
+              </span>
+            </span>
+          </label>
 
           <label class="contact-form-field" for="contact_comment">
             <span class="contact-form-field-span">Комментарий</span>
