added footer form portfolio

--- a/index.html
+++ b/index.html
@@ -507,6 +507,7 @@
               id="footer_subscribe_mail"
               class="footer-subscribe-input"
               placeholder="E-mail"
+              type="email"
               name="user-subscribe-mail"
               required
             />
@@ -579,7 +580,6 @@
               </span>
             </span>
           </label>
-
           <label class="contact-form-field" for="contact_comment">
             <span class="contact-form-field-span">Комментарий</span>
             <textarea
