--- a/portfolio.html
+++ b/portfolio.html
@@ -318,6 +318,7 @@
             </ul>
           </address>
         </div>
+        <!-- Footer socials -->
         <div class="footer-join-us">
           <h2 class="footer-social-title">присоединяйтесь</h2>
           <ul class="footer-social-list list">
@@ -350,6 +351,27 @@
               </a>
             </li>
           </ul>
+        </div>
+        <!-- Footer subscribe -->
+        <div class="footer-subscribe">
+          <p class="footer-subscribe-title">Подпишитесь на рассылку</p>
+          <form>
+            <label for="footer_subscribe_mail"></label>
+            <input
+              id="footer_subscribe_mail"
+              type="email"
+              class="footer-subscribe-input"
+              placeholder="E-mail"
+              name="user-subscribe-mail"
+              required
+            />
+            <button type="submit" class="footer-subscribe-btn">
+              Подписаться
+              <svg class="footer-subscribe-icon" width="24px" height="24px">
+                <use href="./images/icons.svg#icon-send-telegram"></use>
+              </svg>
+            </button>
+          </form>
         </div>
       </div>
     </footer>
